<resources>
    <string name="app_name">Implicit Intents</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">My Location</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="share_text">\"Share this text with: \"</string>
    <string name="my_location">https://www.google.com/maps/place/-1.3639353778940337+36.93491935729981/@-1.3639353778940337,36.93491935729981,17z</string>

    <string name="phone_number">+254793023456</string>
    <string name="call_number">Call</string>
</resources>